[gd_scene load_steps=3 format=3 uid="uid://cnlaw0toyi8yn"]

[ext_resource type="Script" path="res://paragraph_container.gd" id="1_g0jvv"]
[ext_resource type="PackedScene" uid="uid://b613ovm5co7bx" path="res://button_generate_image.tscn" id="3_541ia"]

[node name="ParagraphContainer" type="PanelContainer"]
offset_right = 340.0
offset_bottom = 245.0
script = ExtResource("1_g0jvv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ButtonAdd" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_direction = 1
layout_mode = 2
text = "But Niko was not one to give up easily. He knew that The Fox had to be stopped, and he was determined to see it through, no matter the cost. With renewed resolve, he set off once more into the night, determined to bring the notorious thief to justice and restore peace to the city."
autowrap_mode = 3

[node name="FlowContainer" type="FlowContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonGenerateImage" parent="VBoxContainer/FlowContainer" instance=ExtResource("3_541ia")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonSplit" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "-"

[connection signal="button_down" from="VBoxContainer/ButtonAdd" to="." method="_on_button_add_button_down"]
[connection signal="button_down" from="VBoxContainer/ButtonSplit" to="." method="_on_button_split_button_down"]
